--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Nomad Force HTML Bootstrap 5 Template</title>
+        <title>Shanga Farm</title>
 
-        <!-- CSS FILES -->
+        <link rel="icon" type="image/png" sizes="16x16" href="images/android-chrome-192x192.png">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,13 +25,6 @@
         <link href="css/aos.css" rel="stylesheet">
 
         <link href="css/templatemo-nomad-force.css" rel="stylesheet">
-<!--
-
-TemplateMo 567 Nomad Force
-
-https://templatemo.com/tm-567-nomad-force
-
--->
     </head>
     
     <body>
@@ -40,11 +34,11 @@ https://templatemo.com/tm-567-nomad-force
             <section class="hero" id="hero">
                 <div class="heroText">
                     <h1 class="text-white mt-5 mb-lg-4" data-aos="zoom-in" data-aos-delay="800">
-                        Nomad Force
+                        Shanga Farm
                     </h1>
 
                     <p class="text-secondary-white-color" data-aos="fade-up" data-aos-delay="1000">
-                        create a great video for your <strong class="custom-underline">website</strong>
+                        Order your chicks  <strong class="custom-underline">now</strong>
                     </p>
                 </div>
 
@@ -62,7 +56,7 @@ https://templatemo.com/tm-567-nomad-force
             <nav class="navbar navbar-expand-lg bg-light shadow-lg">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        <strong>Nomad Force</strong>
+                        <strong>Shanga Farm</strong>
                     </a>
 
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -99,11 +93,12 @@ https://templatemo.com/tm-567-nomad-force
                 <div class="container mb-5 pb-lg-5">
                     <div class="row">
                         <div class="col-12">
-                            <h2 class="mb-3" data-aos="fade-up">Let us create...</h2>
+                            <h2 class="mb-3" data-aos="fade-up">welcome to our one day <br> old chick farm...</h2>
                         </div>
 
                         <div class="col-lg-6 col-12 mt-3 mb-lg-5">
-                            <p class="me-4" data-aos="fade-up" data-aos-delay="300">You may contribute <a rel="nofollow" href="http://paypal.me/templatemo" target="_blank">a small amount</a> via PayPal if <a rel="nofollow" href="https://templatemo.com/tm-567-nomad-force" target="_parent">Nomad Force Template</a> is useful for you. This will absolutely help us to keep creating better CSS templates for you. <br><br>We provide you 100% free templates on TemplateMo website. Images are provided by FreePik and Unsplash websites.</p>
+                            <p class="me-4" data-aos="fade-up" >if you find our services helpful in yourr quest for quality chicks, we greatly appreciate your support</p>
+                                we are dedicated to offering you the best one-day-old chicks for your poultry needs</p>
                         </div>
 
                         <div class="col-lg-6 col-12 mt-lg-3 mb-lg-5">
