Added link to style.css (generated by useblackbox.ai )

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link href="css/aos.css" rel="stylesheet">
 
         <link href="css/templatemo-nomad-force.css" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
@@ -97,12 +98,13 @@
                         </div>
 
                         <div class="col-lg-6 col-12 mt-3 mb-lg-5">
-                            <p class="me-4" data-aos="fade-up" >if you find our services helpful in yourr quest for quality chicks, we greatly appreciate your support</p>
-                                we are dedicated to offering you the best one-day-old chicks for your poultry needs</p>
+                            <p class="me-4" data-aos="fade-up" >If you find our services helpful in your quest for quality chicks, we greatly appreciate your support</p>
+                            <p class="me-4" data-aos="fade-up" > Hence shop with us</p>
+                                
                         </div>
 
                         <div class="col-lg-6 col-12 mt-lg-3 mb-lg-5">
-                            <p data-aos="fade-up" data-aos-delay="500">This Bootstrap 5 layout is free to use for your business. You are allowed to edit it in any way you like. However, please do not redistribute this template ZIP file for a template download purpose on any other website such as Free CSS collections.</p>
+                            <p data-aos="fade-up" data-aos-delay="500" >We are dedicated to offering you the best one-day-old chicks for your poultry needs</p>
                         </div>
 
                     </div>
@@ -110,11 +112,13 @@
 
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-3 col-12 p-0">      
-                            <img src="images/elena-rabkina-eVVzwsNhNf4-unsplash.jpg" class="img-fluid about-image" alt="">
+                        <div class="col-lg-4 col-12 p-0">      
+                            <div class="thumbnail">
+                                <a href="https://twitter.com/Collins95040145" target="_blank"><img id="chicks" src="images/news/Day old chicks.jpeg" class="img-fluid about-image" alt="" ></a>
+                            </div>
                         </div>
 
-                        <div class="col-lg-3 col-12 bg-dark">  
+                        <div class="col-lg-2 col-12 bg-dark">  
                             <div class="d-flex flex-column flex-wrap justify-content-center h-100 py-5 px-4 pt-lg-4 pb-lg-0">
                                 <h3 class="text-white mb-3" data-aos="fade-up">We’re - idealists and strategic thinkers.</h3>
 
