Changed "Our Studio" to "Workplace" in the navigation bar. (generated by useblackbox.ai )

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#about">Our Studio</a>
+                                <a class="nav-link" href="#about">Workplace</a>
                             </li>
 
                             <li class="nav-item">
