Changed "Accessible" to "Easily Accessible" on the hatchery vaccination page (generated by useblackbox.ai )

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                         <img src="images/carousel/hatchery_vaccination.jpg" class="img-fluid team-image" alt="">
 
                                         <div class="team-thumb bg-success">
-                                            <h3 class="text-white mb-0">Accessible.</h3>
+                                            <h3 class="text-white mb-0">Easily Accessible.</h3>
 
                                             
                                         </div>
