--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
                         <div class="col-lg-6 col-12 mb-5 mb-lg-0">
                             <div class="news-thumb" data-aos="fade-up">
-                                <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-image-hover news-image-hover-warning">
+                                <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-image-hover news-image-hover-warning" target="_blank">
                                     <img src="images/upcoming_events/kenchick-africa-nairobi.jpg" class="img-fluid large-news-image news-image" alt="">
                                 </a>
 
@@ -333,7 +333,7 @@
                                 
                                 <div class="news-text-info">
                                     <h5 class="news-title">
-                                        <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-title-link">The 7th Agro & Poultry Africa 2023 is an International Trade Show on Agriculture, Aquaculture, Dairy, Irrigation, Livestock & Poultry, Tractors & Machinery, and Veterinary</a>
+                                        <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-title-link" target="_blank">The 7th Agro & Poultry Africa 2023 is an International Trade Show on Agriculture, Aquaculture, Dairy, Irrigation, Livestock & Poultry, Tractors & Machinery, and Veterinary</a>
                                     </h5>
 
                                     <span class="text-muted">22 hours ago</span>
@@ -345,7 +345,7 @@
                             <div class="news-thumb news-two-column d-flex flex-column flex-lg-row" data-aos="fade-up">
                                 <div class="news-top w-100">
                                     
-                                    <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-image-hover news-image-hover-primary">
+                                    <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-image-hover news-image-hover-primary" target="_blank">
                                         <img src="images/upcoming_events/kenya-inaguration-by-kncci-chairman-kenya-2023-inaguration.jpg" class="img-fluid news-image" alt="">
                                     </a>
 
@@ -355,7 +355,7 @@
                                 <div class="news-bottom w-100">
                                     <div class="news-text-info">
                                         <h5 class="news-title">
-                                            <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-title-link">Job Opportunities: Digital, Marketing</a>
+                                            <a href="https://www.mxmexhibitions.com/agro-dairy-poultry-kenya/#:~:text=The%207th%20Agro%20%26%20Poultry%20Africa,Expo%20Centre%20in%20Nairobi%2C%20Kenya." class="news-title-link" target="_blank">Job Opportunities: Digital, Marketing</a>
                                         </h5>
 
                                         <div class="d-flex flex-wrap">
@@ -467,7 +467,7 @@
             </section>
 
             <section class="google-map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.807194752051!2d35.16827867573292!3d0.13530776427396518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x178063207fec477f%3A0x5aba9c55e5ccd5bb!2sKipsebwo%20Primary%20School%20Rd!5e0!3m2!1sen!2ske!4v1696356945323!5m2!1sen!2ske" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1994.9033612443989!2d35.16920861214788!3d0.13814971731582834!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2ske!4v1696360275326!5m2!1sen!2ske" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
 
         </main>
