--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
                             <h2 class="mb-4 text-center" data-aos="fade-up">Reach out to us</h2>
 
-                            <form action="https://form.jotform.com/232764822142050" method="post" class="contact-form" role="form" data-aos="fade-up">
+                            <form action="https://formspree.io/f/mleyoarv" method="POST" class="contact-form" role="form" data-aos="fade-up">
 
                                 <div class="row">
                                     
