edited the phone number

--- a/index.html
+++ b/index.html
@@ -335,6 +335,11 @@
 
                                         <input type="email" name="email" id="email" pattern="[^ @]*@[^ @]*" class="form-control" placeholder="Email address" required>
                                     </div>
+                                    <div class="col-lg-6 col-6">
+                                        <label for="phone" class="form-label">Phone number <sup class="text-danger">*</sup></label>
+
+                                        <input type="number" name="phone" id="phone "  class="form-control" placeholder="Enter Phone Number" required>
+                                    </div>
 
                                     <div class="col-12 my-4">
                                         <label for="message" class="form-label">How can we help?</label>
