--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     <div class="col-12">
                         <h5 class="text-white">
                             <i class="bi-geo-alt-fill me-2"></i>
-                            Nandi Hills, Kenya
+                            Kipsebwo,Nandi Hills, Kenya
                         </h5>
 
                         <a href="mailto:collinskoech092@gmail.com" class="custom-link mt-3 mb-5">
