Update heroText div and cointainer div classes (generated by useblackbox.ai )

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <main>
 
             
-                <div class="heroText">
+                <div class="heroText ">
                     <h1 class="text-dark mt-5 mb-lg-4" data-aos="zoom-in" data-aos-delay="800">
                         Shanga Farm
                     </h1>
@@ -43,7 +43,7 @@
                     </p>
                 </div>
 
-                <div class="cointainer">
+                <div class="cointainer mb-lg-5">
                     <div class="carousel">
                         <div class="col-lg  p-0" >  
                             <section id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
