--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#contact">Contact Us</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="gallery.html">Gallery</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -179,7 +182,7 @@
                             <section id="myCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="images/carousel/kenchics.png" class="img-fluid team-image" alt="">
+                                        <img src="images/camera/20231005_133502.jpg" class="img-fluid team-image" alt="">
 
                                         <div class="team-thumb bg-success">
                                             <h3 class="text-white mb-0">Healthy.</h3>
@@ -189,7 +192,7 @@
                                     </div>
 
                                     <div class="carousel-item">
-                                        <img src="images/carousel/Broiler Chicks.jpeg" class="img-fluid team-image" alt="">
+                                        <img src="images/camera/20231005_133532.jpg" class="img-fluid team-image" alt="">
 
                                         <div class="team-thumb bg-primary">
                                             <h3 class="text-white mb-0">Affordable</h3>
@@ -209,7 +212,7 @@
                                     </div>
 
                                     <div class="carousel-item">
-                                        <img src="images/carousel/How to Care for Bantam Chicks Shipped by Mail.jpeg" class="img-fluid team-image" alt="">
+                                        <img src="images/camera/20231005_195924.jpg" class="img-fluid team-image" alt="">
 
                                         <div class="team-thumb bg-info">
                                             <h3 class="text-white mb-0">Cheap.</h3>
