Changed the captions of the images. (generated by useblackbox.ai )

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                             </div> 
 
                             <div class="portfolio-thumb" data-aos="fade-up">
-                                <a href="images/portfolio/Day old chicks.jpeg" class="image-popup">
+                                <a href="images/portfolio/Day old chicks.jpeg" data-toggle="tooltip" title="Health technology Eliminates dirt-inflicted diseases"  class="image-popup">
                                     <img src="images/portfolio/Day old chicks.jpeg" class="img-fluid portfolio-image" alt="">
                                 </a>
 
@@ -284,7 +284,7 @@
 
                         <div class="col-lg-6 col-12">
                             <div class="portfolio-thumb mt-5 mt-lg-0 mb-5" data-aos="fade-up">
-                                <a href="images/kenchic/How to Identify Chick Breeds.jpeg" class="image-popup">
+                                <a href="images/kenchic/How to Identify Chick Breeds.jpeg" data-toggle="tooltip" title="improved Breed such as issa brown" class="image-popup">
                                     <img src="images/kenchic/How to Identify Chick Breeds.jpeg" class="img-fluid portfolio-image" alt="">
                                 </a>
 
@@ -296,7 +296,7 @@
                             </div> 
 
                             <div class="portfolio-thumb" data-aos="fade-up">
-                                <a href="images/kenchic/kenchic_banner-3.jpg" class="image-popup">
+                                <a href="images/kenchic/kenchic_banner-3.jpg" data-toggle="tooltip" title="We also offer ready market by keeping in touch with our customers" class="image-popup">
                                     <img src="images/kenchic/kenchic_banner-3.jpg" class="img-fluid portfolio-image" alt="">
                                 </a>
 
