The commit changes the text "Issa Brown" to a link with the text "Issa Brown" and adds the text "Improved Breeds" to the commit. (generated by useblackbox.ai )

--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
                                 </a>
 
                                 <div class="portfolio-info">                     
-                                    <h4 class="portfolio-title mb-0">Issa Brown</h4>
+                                    <a href="#" data-toggle="popover" title="Popover Heading" data-content="This is the improved issa brown breed, ">
+                                        <h4 class="portfolio-title mb-0">Issa Brown</h4>
+                                    </a>
 
                                     <p class="text-warning">Improved Breeds</p>
                                 </div>
