Changed the animation of the h1 element from "zoom-in" to "fade-up". (generated by useblackbox.ai )

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             
                 <div class="heroText ">
-                    <h1 class="text-dark mt-5 mb-lg-4" data-aos="zoom-in" data-aos-delay="800">
+                    <h1 class="text-dark mt-5 mb-lg-4" data-aos="fade-up" data-aos-delay="800">
                         Shanga Farm
                     </h1>
 
