--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
                     <h4 class="mb-5 text-center" data-aos="fade-up">Join our community to get more updates and news</h2>
                 </div>
                 <div class="col-lg-1 col-12 mx-auto ">
-                    <button type="button" class="btn btn-dark form-control" data-bs-toggle="modal" data-bs-target="#myModal">
+                    <button type="submit" class="btn btn-dark form-control" data-bs-toggle="modal" data-bs-target="#myModal">
                         Join Now
                       </button>
                 </div>
