--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Shanga Farm</title>
+        <title>Shanga Farm | Where Services Meet Standards</title>
 
         <link rel="icon" type="image/png" sizes="16x16" href="images/android-chrome-192x192.png">
 
@@ -323,7 +323,7 @@
 
                             <h2 class="mb-4 text-center" data-aos="fade-up">Reach out to us</h2>
 
-                            <form action="https://formspree.io/f/xbjvpqzd" method="POST" class="contact-form" role="form" data-aos="fade-up">
+                            <form action="https://formspree.io/f/mleyoarv" method="POST" class="contact-form" role="form" data-aos="fade-up">
 
                                 <div class="row">
                                     
