Changed the last sentence from "Hence shop with us" to "Hence shop with us.Welcome" (generated by blackbox.ai )

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
                         <div class="col-lg-6 col-12 mt-3 mb-lg-5">
                             <p class="me-4" data-aos="fade-up" >If you find our services helpful in your quest for quality chicks, we greatly appreciate your support</p>
-                            <p class="me-4" data-aos="fade-up" > Hence shop with us</p>
+                            <p class="me-4" data-aos="fade-up" > Hence shop with us.Welcome</p>
                                 
                         </div>
 
